# pcseminar2503

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.bash  compile.bash  compile_no_use_cmake.bash
doc/: miniconda_install.md
run/: animation.bash  check_stable_solution.py  forward  init_sine  plot_u_all.py  plot_u_init.py  plot_u_stable.py
src/: forward.f90  init_sine.f90  read_config.f90
src/00_hello/: CMakeLists.txt  hello.f90
src/01_heateq/: CMakeLists.txt  init_sine.f90  read_config.f90  solve_heateq.f90  solve_heateq_forcing.f90
